tests/errors/23_undeclared_label.f
C     Label não existe    
      PROGRAM TEST
      INTEGER I
      DO 99 I = 1, 5
      END